feat(release-core): integrate @kb-labs/core bundle system
- Replace custom config implementation with loadBundle() from @kb-labs/core-bundle
- Add @kb-labs/core-bundle dependency
- Create loadReleaseConfig() function with support for CLI overrides, profile key, and trace
- Leverage 6-layer config resolution automatically

Benefits:
- Standardization with other KB Labs products
- YAML/JSON support inherited from core
- Profile integration and layered merge
- Better error handling and validation

--- a/packages/release-core/package.json
+++ b/packages/release-core/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@kb-labs/core": "link:../../../kb-labs-core",
-    "@kb-labs/shared-profiles": "link:../../../kb-labs-shared/packages/profiles",
+    "@kb-labs/core-bundle": "link:../../../kb-labs-core/packages/bundle",
     "execa": "^8.0.0",
     "fs-extra": "^11.0.0",
     "globby": "^11.0.0",
