feat(release-cli): migrate to loadReleaseConfig and config in .kb
- Update plan.ts and run.ts commands to use loadReleaseConfig()
- Pass CLI flags through cli parameter for proper override precedence
- Add profile key support in commands
- Move config file from root to .kb/kb-labs.config.yaml
- Remove old kb-labs.config.json from root

Config now follows KB Labs conventions with proper layering and CLI override support.

--- a/packages/release-cli/package.json
+++ b/packages/release-cli/package.json
@@ -44,6 +44,7 @@
     "@kb-labs/cli-commands": "link:../../../kb-labs-cli/packages/commands",
     "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
     "@kb-labs/core": "link:../../../kb-labs-core",
+    "@kb-labs/core-bundle": "link:../../../kb-labs-core/packages/bundle",
     "globby": "^11.0.0",
     "yaml": "^2.5.1"
   },
