--- a/packages/release-cli/package.json
+++ b/packages/release-cli/package.json
@@ -38,6 +38,7 @@
     "test:watch": "vitest -c ../../vitest.config.ts"
   },
   "dependencies": {
+    "@kb-labs/analytics-sdk-node": "link:../../../kb-labs-analytics/packages/analytics-sdk-node",
     "@kb-labs/release-core": "link:../release-core",
     "@kb-labs/release-checks": "link:../release-checks",
     "@kb-labs/cli-core": "link:../../../kb-labs-cli/packages/core",
