chore(config): update package configurations
Update:
- Root package.json and eslint.config.js
- Changelog package configuration
- Release-checks package configuration
- Release-CLI package configuration
- Release-core package configuration

--- a/packages/release-checks/package.json
+++ b/packages/release-checks/package.json
@@ -38,6 +38,7 @@
     "test:watch": "vitest -c ../../vitest.config.ts"
   },
   "dependencies": {
+    "@kb-labs/plugin-contracts": "link:../../../kb-labs-plugin/packages/plugin-contracts",
     "@kb-labs/release-core": "link:../release-core",
     "execa": "^8.0.0",
     "fs-extra": "^11.0.0"
