--- a/packages/release-cli/package.json
+++ b/packages/release-cli/package.json
@@ -47,8 +47,18 @@
     "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
     "@kb-labs/core": "link:../../../kb-labs-core",
     "@kb-labs/core-bundle": "link:../../../kb-labs-core/packages/bundle",
+    "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/manifest",
+    "@aws-sdk/client-s3": "^3.676.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "glob": "^10.3.10",
     "globby": "^11.0.0",
-    "yaml": "^2.5.1"
+    "picomatch": "^4.0.2",
+    "semver": "^7.6.0",
+    "simple-git": "^3.25.0",
+    "uuidv7": "^0.6.1",
+    "yaml": "^2.8.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
@@ -59,7 +69,7 @@
     "vitest": "^3"
   },
   "kb": {
-    "commandsManifest": "./dist/cli.manifest.js"
+    "manifest": "./dist/manifest.v2.js"
   }
 }
 
