--- a/packages/release-core/package.json
+++ b/packages/release-core/package.json
@@ -38,6 +38,7 @@
     "test:watch": "vitest -c ../../vitest.config.ts"
   },
   "dependencies": {
+    "@kb-labs/plugin-contracts": "link:../../../kb-labs-plugin/packages/plugin-contracts",
     "@kb-labs/core": "link:../../../kb-labs-core",
     "@kb-labs/core-bundle": "link:../../../kb-labs-core/packages/bundle",
     "@kb-labs/changelog": "link:../changelog",
@@ -46,7 +47,7 @@
     "globby": "^11.0.0",
     "semver": "^7.6.0",
     "simple-git": "^3.25.0",
-    "yaml": "^2.5.1"
+    "yaml": "^2.8.0"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
