--- a/packages/release-contracts/tsconfig.build.json
+++ b/packages/release-contracts/tsconfig.build.json
@@ -1,11 +1,15 @@
 {
-  "extends": "../../../kb-labs-devkit/packages/devkit/tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "composite": true
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {}
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
-
