--- a/packages/release-checks/package.json
+++ b/packages/release-checks/package.json
@@ -39,18 +39,15 @@
   },
   "dependencies": {
     "@kb-labs/plugin-contracts": "link:../../../kb-labs-plugin/packages/plugin-contracts",
-    "@kb-labs/release-core": "link:../release-core",
-    "execa": "^8.0.0",
-    "fs-extra": "^11.0.0"
+    "@kb-labs/release-core": "link:../release-core"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/fs-extra": "^11.0.0",
-    "@types/node": "^24.7.0",
-    "rimraf": "^6",
-    "tsup": "^8",
-    "typescript": "^5",
-    "vitest": "^3"
+    "@types/node": "^24.3.3",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.5.0",
+    "typescript": "^5.6.3",
+    "vitest": "^3.2.4"
   }
 }
-
