--- a/packages/release-cli/package.json
+++ b/packages/release-cli/package.json
@@ -38,39 +38,25 @@
     "test:watch": "vitest -c ../../vitest.config.ts"
   },
   "dependencies": {
-    "@kb-labs/analytics-sdk-node": "link:../../../kb-labs-analytics/packages/analytics-sdk-node",
-    "@kb-labs/release-core": "link:../release-core",
-    "@kb-labs/release-checks": "link:../release-checks",
     "@kb-labs/changelog": "link:../changelog",
-    "@kb-labs/cli-core": "link:../../../kb-labs-cli/packages/core",
-    "@kb-labs/cli-command-kit": "link:../../../kb-labs-cli/packages/command-kit",
-    "@kb-labs/cli-commands": "link:../../../kb-labs-cli/packages/commands",
-    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
     "@kb-labs/core": "link:../../../kb-labs-core",
-    "@kb-labs/core-bundle": "link:../../../kb-labs-core/packages/bundle",
     "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/manifest",
-    "@aws-sdk/client-s3": "^3.676.0",
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
-    "glob": "^10.3.10",
-    "globby": "^11.0.0",
-    "picomatch": "^4.0.2",
-    "semver": "^7.6.0",
-    "simple-git": "^3.25.0",
-    "uuidv7": "^0.6.1",
-    "yaml": "^2.8.0",
-    "zod": "^4.1.5"
+    "@kb-labs/release-checks": "link:../release-checks",
+    "@kb-labs/release-contracts": "workspace:*",
+    "@kb-labs/release-core": "link:../release-core",
+    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
+    "@kb-labs/shared-command-kit": "link:../../../kb-labs-cli/packages/command-kit",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
-    "@types/node": "^24.7.0",
-    "rimraf": "^6",
-    "tsup": "^8",
-    "typescript": "^5",
-    "vitest": "^3"
+    "@types/node": "^24.3.3",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.5.0",
+    "typescript": "^5.6.3",
+    "vitest": "^3.2.4"
   },
   "kb": {
     "manifest": "./dist/manifest.v2.js"
   }
 }
-
