--- a/packages/release-manager-cli/package.json
+++ b/packages/release-manager-cli/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/node": "^24.3.3",
+    "globby": "^11.0.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
