--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -12,6 +12,24 @@
       "@kb-labs/core-bundle/*": [
         "../kb-labs-core/packages/core-bundle/src/*"
       ],
+      "@kb-labs/core-platform": [
+        "../kb-labs-core/packages/core-platform/src/index.ts"
+      ],
+      "@kb-labs/core-platform/*": [
+        "../kb-labs-core/packages/core-platform/src/*"
+      ],
+      "@kb-labs/core-runtime": [
+        "../kb-labs-core/packages/core-runtime/src/index.ts"
+      ],
+      "@kb-labs/core-runtime/*": [
+        "../kb-labs-core/packages/core-runtime/src/*"
+      ],
+      "@kb-labs/core-sys": [
+        "../kb-labs-core/packages/core-sys/src/index.ts"
+      ],
+      "@kb-labs/core-sys/*": [
+        "../kb-labs-core/packages/core-sys/src/*"
+      ],
       "@kb-labs/core/*": [
         "../kb-labs-core/src/*"
       ],
