--- a/packages/release-manager-changelog/package.json
+++ b/packages/release-manager-changelog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kb-labs/release-manager-changelog",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "KB Labs Release Manager - conventional commits parser and changelog generator",
   "type": "module",
   "main": "./dist/index.js",
@@ -47,6 +47,7 @@
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/node": "^24.3.3",
     "@types/semver": "^7.5.8",
+    "globby": "^11.0.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
