--- a/packages/release-manager-checks/package.json
+++ b/packages/release-manager-checks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kb-labs/release-manager-checks",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "KB Labs Release Manager - check adapters for audit, devlink, mind, tests, and build",
   "type": "module",
   "main": "./dist/index.js",
@@ -49,5 +49,6 @@
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
     "vitest": "^3.2.4"
-  }
+  },
+  "private": true
 }
