fix(release-manager-changelog): update test command to allow no tests
- modified test command in package.json to use --passWithNoTests
- ensures tests can run without failing when no tests are present

🤖 Generated by kb-labs-commit-plugin

--- a/packages/release-manager-changelog/package.json
+++ b/packages/release-manager-changelog/package.json
@@ -34,7 +34,7 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest run -c ../../vitest.config.ts",
+    "test": "vitest run --passWithNoTests -c ../../vitest.config.ts",
     "test:watch": "vitest -c ../../vitest.config.ts"
   },
   "dependencies": {
