--- a/packages/release-manager-cli/package.json
+++ b/packages/release-manager-cli/package.json
@@ -34,7 +34,7 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest run -c ../../vitest.config.ts",
+    "test": "vitest run --passWithNoTests -c ../../vitest.config.ts",
     "test:watch": "vitest -c ../../vitest.config.ts"
   },
   "dependencies": {
