--- a/packages/release-manager-contracts/package.json
+++ b/packages/release-manager-contracts/package.json
@@ -36,7 +36,7 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "test:watch": "vitest"
   },
   "devDependencies": {
