refactor(tsconfig): update tsconfig paths for sdk
- added paths for kb-labs/sdk in tsconfig.paths.json
- ensures proper module resolution for the SDK

🤖 Generated by kb-labs-commit-plugin

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -32,6 +32,12 @@
       ],
       "@kb-labs/release-manager-core/*": [
         "packages/release-manager-core/src/*"
+      ],
+      "@kb-labs/sdk": [
+        "../kb-labs-sdk/packages/sdk/src/index.ts"
+      ],
+      "@kb-labs/sdk/*": [
+        "../kb-labs-sdk/packages/sdk/src/*"
       ]
     }
   }
